--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Test Change</title>
+  <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
